docs: create docs to farms routes
